Traducción (ahora sí)

--- a/src/app/pages/clases/scanner/scanner.page.html
+++ b/src/app/pages/clases/scanner/scanner.page.html
@@ -15,12 +15,12 @@
     <ion-card>
         <ion-card-header>
             <ion-card-title>{{ clase.nombre }}</ion-card-title>
-            <ion-card-subtitle>Sigla: {{ clase.sigla }} - {{ clase.seccion }}</ion-card-subtitle>
-            <ion-card-subtitle>Docente: {{ clase.docente }}</ion-card-subtitle>
-            <ion-card-subtitle>Fecha: {{ clase.dia }}</ion-card-subtitle>
-            <ion-card-subtitle>Hora Inicio: {{ clase.horaInicio }} Hora Término: {{ clase.horaTermino }}</ion-card-subtitle>
+            <ion-card-subtitle>{{"Sigla:" | translate}} {{ clase.sigla }} - {{ clase.seccion }}</ion-card-subtitle>
+            <ion-card-subtitle>{{"Docente" | translate}}: {{ clase.docente }}</ion-card-subtitle>
+            <ion-card-subtitle>{{"Fecha:" | translate}} {{ clase.dia }}</ion-card-subtitle>
+            <ion-card-subtitle>{{"Hora Inicio:" | translate}} {{ clase.horaInicio }} {{"Hora Término:" | translate}} {{ clase.horaTermino }}</ion-card-subtitle>
             <div class="container">
-              <ion-button (click)="deleteClase()" color="danger"> Eliminar Clase
+              <ion-button (click)="deleteClase()" color="danger"> {{"Eliminar Clase" | translate}}
                 <ion-icon name="trash-outline"></ion-icon>
               </ion-button>
                 
@@ -30,7 +30,7 @@
             <div class="container">
               <div class="container">
                 <div class="div" *ngIf="codQR.id != v_idClase">
-                  <ion-button (click)="cargarData(v_idClase,clase.sala,clase.sigla, clase.seccion, clase.sede)" color="warning"> Generar Código QR
+                  <ion-button (click)="cargarData(v_idClase,clase.sala,clase.sigla, clase.seccion, clase.sede)" color="warning"> {{"Generar Código QR" | translate}}
                     <ion-icon name="add-outline"></ion-icon>
                   </ion-button>
                 </div>
@@ -41,7 +41,7 @@
                     <ion-item>
                       <ion-input #codigo placeholder="Ingrese el código"></ion-input>
                     </ion-item>
-                    <ion-button (click)="marcarAsistencia(codigo.value, qr.imagen, qr.idClase, '', '', '')" color="primary"> Marcar asistencia
+                    <ion-button (click)="marcarAsistencia(codigo.value, qr.imagen, qr.idClase, '', '', '')" color="primary"> {{"Marcar asistencia" | translate}}
                     </ion-button>
                   </div>
                 </div>
@@ -53,7 +53,7 @@
               <div class="container" *ngFor="let aux of listaQR">
                 <div *ngIf="aux.idClase == v_idClase" class="container"><!-- si la clase tiene código QR sale la opción de quitar código qr -->
                   <img alt="Código QR"  src="{{ aux.imagen }}"/>
-                  <ion-button (click)="deleteQR(aux.id)" color="warning"> Quitar QR
+                  <ion-button (click)="deleteQR(aux.id)" color="warning"> {{"Quitar QR" | translate}}
                     <ion-icon name="trash-outline"></ion-icon>
                   </ion-button>
                 </div>
