--- a/src/app/pages/clases/asistencia/asistencia.page.html
+++ b/src/app/pages/clases/asistencia/asistencia.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/clases"></ion-back-button>
     </ion-buttons>
-    <ion-title>Asistencia</ion-title>
+    <ion-title>{{"Asistencia" |translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
