--- a/src/app/pages/clases/crearclase/crearclase.page.html
+++ b/src/app/pages/clases/crearclase/crearclase.page.html
@@ -41,7 +41,7 @@
             <ion-item>
               <ion-input #docente type="text" [(ngModel)]="clase.docente" label="Docente" value="" labelPlacement="floating" placeholder="Puente Alto"></ion-input>
             </ion-item>
-           <ion-button color="secondary" (click)="addClase()">Crear Clase</ion-button>
+            <ion-button color="secondary" (click)="addClase()">{{"Crear clase" | translate}}</ion-button>
           </ion-card-content>
        </ion-card>
     </ion-card-content>
