--- a/src/app/pages/clases/scanner/scanner.page.html
+++ b/src/app/pages/clases/scanner/scanner.page.html
@@ -41,7 +41,7 @@
                     <ion-item>
                       <ion-input #codigo placeholder="Ingrese el código"></ion-input>
                     </ion-item>
-                    <ion-button (click)="marcarAsistencia(codigo.value, qr.imagen, qr.idClase, '', '', '')" color="primary"> {{"Marcar asistencia" | translate}}
+                    <ion-button (click)="estudiantePresente(codigo.value, qr.imagen, qr.idClase, '', '', '')" color="primary"> {{"Marcar asistencia" | translate}}
                     </ion-button>
                   </div>
                 </div>
