Nuevo register,se guarda todo(collection,database)

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -34,7 +34,7 @@
   </ion-card-content>
   <ion-buttons class="centrado2">
     <ion-button [disabled]="!loginForm.valid" (click)="login2(correo.value, contrasena.value)" style="color: rgb(255, 208, 0);" fill="clear">{{"Ingresar" | translate}}</ion-button>
-    <ion-button [disabled]="!loginForm.valid" (click)="register(correo.value, contrasena.value)" style="color: rgb(255, 208, 0);" fill="clear">{{"Registrarse" | translate}}</ion-button>
+    <ion-button  (click)="register()" style="color: rgb(255, 208, 0);" fill="clear">{{"Registrarse" | translate}}</ion-button>
   </ion-buttons>
   <ion-button style="color: rgb(0, 17, 255); " fill="clear" [routerLink]="['/register']">{{"Importar cuentas" | translate}}</ion-button>
   <ion-button style="color: rgb(0, 17, 255);" fill="clear" [routerLink]="['/terms']">{{"Ver términos y condiciones" | translate}}</ion-button>
