--- a/src/app/pages/clases/scanner/scanner.page.html
+++ b/src/app/pages/clases/scanner/scanner.page.html
@@ -19,49 +19,62 @@
             <ion-card-subtitle>{{"Docente" | translate}}: {{ clase.docente }}</ion-card-subtitle>
             <ion-card-subtitle>{{"Fecha:" | translate}} {{ clase.dia }}</ion-card-subtitle>
             <ion-card-subtitle>{{"Hora Inicio:" | translate}} {{ clase.horaInicio }} {{"Hora Término:" | translate}} {{ clase.horaTermino }}</ion-card-subtitle>
-            <div class="container">
-              <ion-button (click)="deleteClase()" color="danger"> {{"Eliminar Clase" | translate}}
-                <ion-icon name="trash-outline"></ion-icon>
-              </ion-button>
-                
-            </div>
-        </ion-card-header>
-        <ion-card-content>
-            <div class="container">
-              <div class="container">
-                <div class="div" *ngIf="codQR.id != v_idClase">
-                  <ion-button (click)="cargarData(v_idClase,clase.sala,clase.sigla, clase.seccion, clase.sede)" color="warning"> {{"Generar Código QR" | translate}}
-                    <ion-icon name="add-outline"></ion-icon>
-                  </ion-button>
-                </div>
-              </div>
-              <div>
-                <div *ngFor="let qr of listaQR">
-                  <div *ngIf="qr.idClase == v_idClase">
-                    <ion-item>
-                      <ion-input #codigo placeholder="Ingrese el código"></ion-input>
-                    </ion-item>
-                    <ion-button (click)="estudiantePresente(codigo.value, qr.imagen, qr.idClase, '', '', '')" color="primary"> {{"Marcar asistencia" | translate}}
-                    </ion-button>
-                  </div>
-                </div>
+            <div *ngFor="let user of listaUsuarios">
+              <div *ngIf="user.docente">
+                <ion-button (click)="deleteClase()" color="danger"> {{"Eliminar Clase" | translate}}
+                  <ion-icon name="trash-outline"></ion-icon>
+                </ion-button>
 
               </div>
             </div>
-          <div>
+
+            
+        </ion-card-header>
+        <ion-card-content>
             <div class="container">
-              <div class="container" *ngFor="let aux of listaQR">
-                <div *ngIf="aux.idClase == v_idClase" class="container"><!-- si la clase tiene código QR sale la opción de quitar código qr -->
-                  <img alt="Código QR"  src="{{ aux.imagen }}"/>
-                  <ion-button (click)="deleteQR(aux.id)" color="warning"> {{"Quitar QR" | translate}}
-                    <ion-icon name="trash-outline"></ion-icon>
-                  </ion-button>
+              <div *ngFor="let user of listaUsuarios">
+                <div *ngIf="user.email == usuario.email">
+                  <div *ngIf="user.docente == true">
+                    <div *ngIf="codQR.idClase != v_idClase">
+                      <ion-button (click)="cargarData(v_idClase,clase.sala,clase.sigla, clase.seccion, clase.sede)" color="warning"> {{"Generar Código QR" | translate}}
+                        <ion-icon name="add-outline"></ion-icon>
+                      </ion-button>
+                    </div>
+                  </div>
+
                 </div>
-                
+              </div>
+              <div *ngFor="let user of listaUsuarios">
+                <div *ngIf="user.email == usuario.email">
+
+                  <div *ngIf="user.docente == false">
+                    <div *ngFor="let qr of listaQR">
+                      <div *ngIf="qr.idClase == v_idClase">
+                        <ion-item>
+                          <ion-input #codigo placeholder="Ingrese el código"></ion-input>
+                        </ion-item>
+                        <ion-button (click)="estudiantePresente(codigo.value, qr.imagen, qr.idClase, user.rut, user.nombre, user.apellido)" color="primary"> {{"Marcar asistencia" | translate}}
+                        </ion-button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-              
+            <div *ngFor="let user of listaUsuarios">
+              <div *ngIf="user.email == usuario.email">
+                <div *ngIf="user.docente">
+                  <div class="container" *ngFor="let aux of listaQR">
+                    <div *ngIf="aux.idClase == v_idClase" class="container"><!-- si la clase tiene código QR sale la opción de quitar código qr -->
+                      <img alt="Código QR"  src="{{ aux.imagen }}"/>
+                      <ion-button (click)="deleteQR(aux.id)" color="warning"> {{"Quitar QR" | translate}}
+                        <ion-icon name="trash-outline"></ion-icon>
+                      </ion-button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </ion-card-content>
         </ion-card>
           
