--- a/src/app/pages/formregistrar/formregistrar.page.html
+++ b/src/app/pages/formregistrar/formregistrar.page.html
@@ -3,36 +3,50 @@
 
   <ion-card>
     <ion-card-header class="">
-      <ion-card-title>Registro</ion-card-title>
+      <ion-card-title>Registro Docente</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
       <ion-list>
-        <ion-item>
-          <ion-label position="stacked">Nombre </ion-label>
-          <ion-input #nombre type="text" placeholder="Ingrese su nombre"></ion-input>
-        </ion-item>
-
         <ion-item>
           <ion-label position="stacked">Correo </ion-label>
           <ion-input #email type="email" placeholder="Ingrese correo"></ion-input>
         </ion-item>
 
         <ion-item>
-          <ion-label position="stacked">Edad</ion-label>
-          <ion-input #edad type="text" placeholder="Ingrese su edad"></ion-input>
+          <ion-label position="stacked">Contraseña</ion-label>
+          <ion-input #pass type="password" placeholder="Ingrese contraseña"></ion-input>
         </ion-item>
 
         <ion-item>
-          <ion-label position="stacked">Contraseña</ion-label>
-          <ion-input #pass type="password" placeholder="Ingrese contraseña"></ion-input>
+          <ion-label position="stacked">Rut </ion-label>
+          <ion-input #rut type="text" placeholder="Ingrese su rut"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Nombre </ion-label>
+          <ion-input #nombre type="text" placeholder="Ingrese su nombre"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Apellido </ion-label>
+          <ion-input #apellido type="text" placeholder="Ingrese su apellido"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Carrera</ion-label>
+          <ion-input #carrera type="text" placeholder="Ingrese su carrera"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="stacked">Sede</ion-label>
+          <ion-input #sede type="text" placeholder="Ingrese su sede"></ion-input>
         </ion-item>
       </ion-list>
     </ion-card-content>
 
     <ion-card-content>
       <div class="">
-        <ion-button size="large" color="warning" (click)="registrarUsuario(email.value, pass.value, nombre.value, edad.value)">Registrar</ion-button>
+        <ion-button size="large" color="warning" (click)="registrarUsuario(email.value, pass.value,rut.value, nombre.value,apellido.value, carrera.value, sede.value)">Registrar</ion-button>
       </div>
     </ion-card-content>
   </ion-card>
