--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -36,7 +36,7 @@
     <ion-button [disabled]="!loginForm.valid" (click)="login2(correo.value, contrasena.value)" style="color: rgb(255, 208, 0);" fill="clear">{{"Ingresar" | translate}}</ion-button>
     <ion-button  (click)="register()" style="color: rgb(255, 208, 0);" fill="clear">{{"Registrarse" | translate}}</ion-button>
   </ion-buttons>
-  <ion-button style="color: rgb(0, 17, 255); " fill="clear" [routerLink]="['/formregistrar']">{{"Importar cuentas" | translate}}</ion-button>
+  <ion-button style="color: rgb(0, 17, 255); " fill="clear" [routerLink]="['/formregistrar']">{{"Registrar docente" | translate}}</ion-button>
   <ion-button style="color: rgb(0, 17, 255);" fill="clear" [routerLink]="['/terms']">{{"Ver términos y condiciones" | translate}}</ion-button>
 </ion-card>
 </ion-content>
