test qr funciona

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -38,5 +38,6 @@
   </ion-buttons>
   <ion-button style="color: rgb(0, 17, 255); " fill="clear" [routerLink]="['/formregistrar']">{{"Registrar docente" | translate}}</ion-button>
   <ion-button style="color: rgb(0, 17, 255);" fill="clear" [routerLink]="['/terms']">{{"Ver términos y condiciones" | translate}}</ion-button>
+  <ion-button style="color: rgb(0, 17, 255);" fill="clear" [routerLink]="['/clases/scanner/location']">qr</ion-button>
 </ion-card>
 </ion-content>
